# kaktwoos-cl

./: .gitignore  CMakeLists.txt  README.md  clutil.h  kaktwoos-nv.cl  kaktwoos.cl  kaktwoos_1.07_opencl  main-amd.c  main-intel.c  main-nv.c  main.c
.github/: semantic.yml
.github/workflows/: main.yml
